...
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bxj-LW-vQD">
                                                <rect key="frame" x="0.0" y="75" width="319" height="30"/>
                                                <nil key="textColor"/>
...
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" textContentType="email"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cjp-Yx-5CZ">
                                                <rect key="frame" x="0.0" y="110" width="319" height="30"/>
                                                <nil key="textColor"/>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                <color key="tintColor" red="0.93501371150000001" green="0.53374600409999995" blue="0.1995075047" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Sign In">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="113" height="28"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                        <state key="normal" title="Create an Account">
                                                            <color key="titleColor" red="0.93501371150000001" green="0.53374600409999995" blue="0.1995075047" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
...
        <scene sceneID="gcF-N9-R7g">
            <objects>
                <viewController title="Register" id="esm-xh-GTy" customClass="RegisterViewController" customModule="MariGold" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="RRZ-xS-NJu">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                        <rect key="frame" x="8" y="8" width="319" height="214"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mOo-S3-nPL">
                                                <rect key="frame" x="0.0" y="0.0" width="319" height="30"/>
                                                <nil key="textColor"/>
...
                                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" textContentType="given-name"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="80p-GV-WEE">
                                                <rect key="frame" x="0.0" y="35" width="319" height="30"/>
                                                <nil key="textColor"/>
...
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES" textContentType="password"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rzW-Wz-Y0C">
                                                <rect key="frame" x="0.0" y="140" width="319" height="30"/>
                                                <nil key="textColor"/>
...
