...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Medication-->
        <scene sceneID="V8A-Hl-sQe">
            <objects>
                <viewController storyboardIdentifier="Medication.storyboard" title="Medication" useStoryboardIdentifierAsRestorationIdentifier="YES" id="jzm-8v-ITY" customClass="MedicationViewController" customModule="MariGold" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Lsi-VZ-Imh">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Plain Cell" rowHeight="80" id="bNN-NO-77k" customClass="medicationTableViewCell" customModule="MariGold" customModuleProvider="target">
...
                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MVL-HY-zTp">
                                                    <rect key="frame" x="16" y="11" width="288" height="22"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4O-mt-ki0">
                                                            <rect key="frame" x="0.0" y="0.0" width="144" height="22"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Undefined" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lr3-Qe-qZQ">
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="1Dw-Kv-2UN" id="k2d-7k-Zpp"/>
                            <outlet property="delegate" destination="1Dw-Kv-2UN" id="Fjl-8j-6cy"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Info" id="9KA-V7-202"/>
                    <connections>
                        <outlet property="EditNameField" destination="mqD-G4-niX" id="s5D-CC-c80"/>
                        <outlet property="LeaguesBannedIn" destination="cah-On-DG4" id="3af-Gk-jOI"/>
                        <outlet property="MainNameCell" destination="nIb-dP-p4P" id="Bp8-Bi-eAJ"/>
                        <outlet property="Name" destination="DdJ-DB-ZPU" id="0fF-5p-Nor"/>
                        <outlet property="PossibleSideEffects" destination="VLK-ES-Ap3" id="C6R-QU-PvK"/>
...
                            <connections>
                                <segue destination="BYd-ql-bP5" kind="show" identifier="displayAddNotifications" id="EEb-tU-Hfh"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="Done" destination="P8g-o8-zcA" id="9WJ-SF-UjL"/>
                        <outlet property="EmailNotif" destination="GY7-Zn-t8Q" id="dOL-Ix-zYk"/>
                        <outlet property="PhoneNotif" destination="mZL-kN-szk" id="sfn-Ps-iQd"/>
                        <outlet property="Quantity" destination="LbP-uG-Ru1" id="zWv-3l-qNW"/>
                        <outlet property="RefillNotif" destination="Dwk-0O-Csf" id="rJl-2b-zc4"/>
                        <outlet property="Temporary" destination="YWb-DF-I7n" id="bQl-WC-dvd"/>
                        <outlet property="allergyConflictsLabel" destination="rzw-Un-29I" id="yEi-0f-NhG"/>
...
                                            <button opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PYS-7Z-M0m">
                                                <rect key="frame" x="270" y="0.0" width="50" height="56"/>
                                                <color key="backgroundColor" red="0.79536682367324829" green="0.79743009805679321" blue="0.81495922803878784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="50" id="ITO-8c-JVs"/>
                                                </constraints>
                                                <state key="normal" image="Camera"/>
                                                <state key="highlighted" image="Camera"/>
                                                <connections>
                                                    <action selector="openPhotoLibraryButtonWithSender:" destination="Fl3-VQ-lrV" eventType="touchUpInside" id="69X-X1-nhr"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
                            <outlet property="dataSource" destination="BYd-ql-bP5" id="P3H-aA-TjN"/>
                            <outlet property="delegate" destination="BYd-ql-bP5" id="RJO-uh-cUB"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Add Notifications" id="5K9-Id-ZQ5">
                        <barButtonItem key="backBarButtonItem" title="Add" id="MWL-KL-rQU"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Thq-2J-Zvj">
                            <connections>
                                <action selector="addNotificationAction:" destination="BYd-ql-bP5" id="Vel-T4-Blk"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
